split to pages. Devtools: not successful

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,6 +1,11 @@
 spring:
   profiles:
     active: dev
+  thymeleaf:
+    mode: HTML
+  devtools:
+    restart:
+      trigger-file: BookApp.java
 
 book:
   name: bookname
